# demo-docs-bot

./: .env.example  .gitignore  README.md  agent_utils.py  config.py  gemini_llm.py  gemini_responses.py  main.py  models.py  prompts.py  pyproject.toml  server.py  tools.py
src/wandb_docs_agent/: config.py  database.py  main.py  models.py  prompts.py  server.py  tools.py  utils.py
tests/: test_create_ticket.py  test_fastapi_ticket.py  test_server.py  test_tool_behavior.py
