[project]
name = "demo-docs-bot"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openai-agents",
    "google-genai",
    "python-dotenv",
    "aiohttp",
    "wandb",
    "weave",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.1",
    "requests>=2.32.3",
    "pydantic>=2.11.3",
    "simple-parsing>=0.1.7",
    "httpx>=0.28.1",
]
